Fix whitespace issues when packaged

--- a/src/app/components/diff/diff.component.less
+++ b/src/app/components/diff/diff.component.less
@@ -1,12 +1,14 @@
 :host {
-    overflow: auto;
     font-family: monospace;
-    white-space: pre;
+    overflow: auto;
     width: 100%;
-    // min-width: 100%;
+    height: 100%;
     position: relative;
 }
-
+.code {
+    font-family: monospace;
+    white-space: pre;
+}
 
 .line-wrapper {
     min-width: 100%;
@@ -16,8 +18,6 @@
         width: 100%;
         display: block;
     }
-
-
 }
 
 .addition {
